GNOME Bugzilla – Bug 616794
Miscellaneous string fixes
Last modified: 2011-11-15 09:03:23 UTC
Created attachment 159550 [details] [review] Miscellaneous string fixes Patch attached which fixes various small problems with translatable strings. Most of them are capitalisation or typo fixes. There are three strings where I've removed markup, and one where I've used a Unicode ellipsis instead of an ASCII one. This is a slightly controversial change; see bug #595615 for more information.
Created attachment 201419 [details] [review] Updated patch Created new, updated patch including all the changes which have not been applied yet to the latest trunk.
Thanks. Patch committed.