Various small string fixes.

Mostly capitalisation fixes, but there are some spelling fixes, and
three strings which have had markup removed. One string has been
changed from using an ASCII ellipsis to a Unicode one.

https://bugzilla.gnome.org/show_bug.cgi?id=616794